# suz-sdk-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  pyproject.toml
docs/: technical_specification.md
src/suz_sdk/: __init__.py  async_client.py  client.py  config.py  exceptions.py
src/suz_sdk/api/: __init__.py  async_health.py  async_integration.py  async_orders.py  async_reports.py  health.py  integration.py  orders.py  reports.py
src/suz_sdk/auth/: __init__.py  async_auth_api.py  async_token_manager.py  async_true_api.py  auth_api.py  token_manager.py  true_api.py
src/suz_sdk/signing/: __init__.py  base.py  cryptopro.py  noop.py
src/suz_sdk/transport/: __init__.py  async_httpx_transport.py  base.py  httpx_transport.py  retry.py
tests/: test_async_client.py  test_config.py  test_cryptopro.py  test_exceptions.py  test_health.py  test_integration.py  test_integration_new.py  test_orders.py  test_orders_new.py  test_reports.py  test_retry.py  test_signing.py  test_token_manager.py  test_transport.py  test_true_api.py
