[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suz-sdk"
version = "0.1.0"
description = "Python SDK for СУЗ API 3.0 (СУЗ-Облако 4.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["suz", "crpt", "marking", "api", "sdk"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suz_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
